# V2X-injected-mapbox

./: .gitignore  .gitmodules  .npmignore  index.d.ts  package.json
android/: build.gradle
android/rctmgl/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/rctmgl/src/main/: AndroidManifest.xml
android/rctmgl/src/main/java/com/mapbox/rctmgl/components/mapview/: RCTMGLMapView.java
android/rctmgl/src/main/java/com/mapbox/rctmgl/components/styles/sources/: RCTMGLShapeSource.java
android/rctmgl/src/main/java/com/mapbox/rctmgl/models/: ObuInfo.java  TlSpat.java
android/rctmgl/src/main/java/com/mapbox/rctmgl/modules/: RCTMGLModule.java
android/rctmgl/src/main/java/com/mapbox/rctmgl/service/: BleService.java
android/rctmgl/src/main/proto/: hmi_interface.proto
cpp/: RnCore.cpp  RnCore.h
example/: metro.config.js  package.json
example/android/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/RNMapboxGLExample.xcodeproj/: project.pbxproj
example/src/: App.js
example/src/examples/: BugReportExample.js  CacheManagement.js
example/src/examples/Animations/: AnimatedLine.js  DriveTheLine.js
example/src/examples/Annotations/: CustomCallout.tsx  Heatmap.js  MarkerView.js  PointAnnotationAnchors.js  ShowPointAnnotation.js
example/src/examples/Camera/: CompassView.js  Fit.js  FlyTo.js  GetCenter.js  GetZoom.js  RestrictMapBounds.js  SetHeading.js  SetPitch.js  SetUserTrackingModes.js  TakeSnapshot.js  TakeSnapshotWithMap.js  YoYo.js
example/src/examples/FillRasterLayer/: ChoroplethLayerByZoomLevel.js  CustomVectorSource.js  GeoJSONSource.js  ImageOverlay.js  IndoorBuilding.js  QueryAtPoint.js  QueryWithRect.js  WatercolorRasterTiles.js
example/src/examples/LineLayer/: GradientLine.js
example/src/examples/Map/: ChangeLayerColor.js  CreateOfflineRegion.js  PointInMapView.js  ShowAndHideLayer.js  ShowClick.js  ShowMap.tsx  ShowMapLocalStyle.tsx  ShowRegionDidChange.js  SourceLayerVisibility.js  StyleJson.js  TwoByTwo.js
example/src/examples/SymbolCircleLayer/: CustomIcon.js  DataDrivenCircleColors.js  EarthQuakes.js  ShapeSourceIcon.js
example/src/examples/UserLocation/: SetDisplacement.js  SetTintColor.js  SetUserLocationRenderMode.js  SetUserLocationVerticalAlignment.js  UserLocationChange.js
example/src/examples/common/: PulseCircleLayer.js
ios/RCTMGL/: MGLModule.h  MGLModule.m
javascript/: index.js
scripts/: postpack.sh  prepack.sh
